--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,23 @@ djangorestframework~=3.14.0
 django-perms~=2.1.0
 django-filter
 django-celery-beat
-
+djangorestframework-simplejwt==5.0.0
+django_redis
 psycopg2-binary
 celery~=5.3.4
 redis
 python-dotenv~=1.0.0
-kombu~=5.3.2
+kombu~=5.3.4
 python_telegram_bot
 schedule
 Pillow
 apscheduler
 requests
+
+asgiref==3.7.2
+sqlparse==0.4.4
+typing_extensions==4.8.0
+pytz==2023.3.post1
+stripe~=7.0.0
+pytest~=7.4.2
+drf_yasg
